Fix the position of the error message on Mobile and Desktop Version.

--- a/style.css
+++ b/style.css
@@ -457,8 +457,13 @@ form > textarea {
 }
 
 .errorMsg {
-  color: red;
-  font-size: 12px;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #EB6383;
+  font-weight: bold;
+  margin-top: 12px;
 }
 
 .contact_footer {
